# RealTime_Log_Analyser

./: README.md  docker-compose.yml
.gitignore/: .gitignore
backend/: CMakeLists.txt  Dockerfile
backend/include/: BloomFilter.h  CountMinSketch.h  DatabaseManager.h  HashUtils.h  HyperLogLog.h  LogReceiver.h  SpaceSaving.h
backend/scripts/: generate_traffic.py
backend/src/: BloomFilter.cpp  CountMinSketch.cpp  DatabaseManager.cpp  HashUtils.cpp  HyperLogLog.cpp  LogReceiver.cpp  SpaceSaving.cpp  main.cpp
frontend/: Dockerfile  package-lock.json
frontend/src/: App.css  App.jsx
